alignment issues solved

--- a/src/components/CSS files/dishCard.css
+++ b/src/components/CSS files/dishCard.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   padding: 0;
+  width: 60px;
 }
 .quantity__minus,
 .quantity__plus {
