--- a/src/views/home.css
+++ b/src/views/home.css
@@ -50,6 +50,7 @@
 
  .option{
   background-color: white;
+  cursor: pointer;
  }     
   .option:hover{
     background-color: #bbbbbb;
